Add swagger docs route for GET /v2/channels. Add file with some notes about hard to find swagger issues
